--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,7 +28,7 @@ a {
   padding: 0px 16px;
   line-height: 50px;
   min-width: 110px;
-  width: 110px;
+  /* width: 110px; */
   color: #fff;
   text-align: center;
   font-size: 1.6rem;
@@ -38,6 +38,27 @@ a {
 }
 .btn:hover {
   opacity: 0.9;
+  cursor: pointer;
+}
+.heading-lv2 {
+  color: #171100;
+  font-family: var(--font-heading);
+  font-size: 3.8rem;
+  font-weight: 700;
+  line-height: 1.27;
+  letter-spacing: -0.76px;
+}
+.line-clamp {
+  display: -webkit-box;
+  -webkit-line-clamp: var(--line-clamp, 1);
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+}
+.line-clamp.line-2 {
+  --line-clamp: 2;
+}
+.break-all {
+  word-break: break-all;
 }
 /* ========common======== */
 
@@ -226,4 +247,166 @@ a {
 }
 .content-block .strong strong:nth-child(2) {
   margin-left: 28px;
+}
+
+/* popular */
+.popular {
+  margin: 65px 0;
+  margin-top: 135px;
+}
+.popular .popular-top {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.popular .popular-top .info .desc {
+  color: #5f5b53;
+  font-size: 1.8rem;
+  line-height: 1.67;
+  margin-top: 16px;
+  width: 458px;
+}
+.popular .controls {
+  display: flex;
+  align-items: center;
+  gap: 18px;
+}
+.popular .controls .controls-btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 40px;
+  height: 40px;
+  color: var(--bg-btn);
+  border-radius: 4rem;
+  border: 1px solid var(--bg-btn);
+  background: transparent;
+}
+.popular .controls .controls-btn:hover {
+  color: #fff;
+  background: var(--bg-btn);
+}
+.popular .course-list {
+  margin-top: 55px;
+  display: flex;
+  gap: 30px;
+}
+.popular .course-item:hover {
+  border-radius: 12px;
+  border: 1px solid transparent;
+  background: #fff;
+  box-shadow: 0px 18px 36px 0px rgba(0, 0, 0, 0.05);
+}
+.popular .course-item {
+  flex: 1;
+  border-radius: 12px;
+  background: #fff;
+  border: 1px solid #e2dfda;
+}
+.popular .course-item .thumb {
+  width: 100%;
+  border-radius: 12px 12px 0px 0px;
+  height: 278px;
+  object-fit: cover;
+}
+.popular .course-item .info {
+  margin: 16px 22px 22px;
+}
+.popular .course-item .info .foot,
+.popular .course-item .info .head .rating,
+.popular .course-item .info .head {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.popular .course-item .info .head .title a {
+  color: #171100;
+  font-size: 1.8rem;
+  font-weight: 600;
+}
+.popular .course-item .info .head .rating .value {
+  margin-left: 6px;
+  color: #fea31b;
+  font-size: 1.6rem;
+}
+.popular .course-item .info .desc {
+  margin-top: 6px;
+  color: #5f5b53;
+  font-size: 14px;
+  line-height: 1.86; /* 185.714% */
+}
+.popular .course-item .info .foot {
+  margin-top: 12px;
+}
+.popular .course-item .info .foot {
+  color: #171100;
+  font-size: 1.8rem;
+  font-weight: 600;
+}
+.popular .course-item .info .foot .btn-book {
+  border: none;
+}
+.popular .course-item .info .foot .btn-book:hover {
+  background: var(--bg-btn);
+}
+
+/* =======================feedback===================== */
+.feedback {
+  margin-top: 135px;
+  background: #2e2100;
+  padding: 96px 0;
+}
+.feedback .feedback-item {
+  display: flex;
+}
+.feedback .feedback-item .info .avatar {
+  width: 72px;
+  height: 72px;
+  border-radius: 50%;
+  object-fit: cover;
+}
+.feedback .feedback-item .info .member-name {
+  margin-top: 18px;
+  color: #f7f7f7;
+  font-family: var(--font-heading);
+  font-size: 2.4rem;
+  font-weight: 700;
+  line-height: 1.42;
+}
+.feedback .feedback-item .info .desc {
+  margin-top: 4px;
+  color: #bfbcb2;
+  font-size: 1.4rem;
+  line-height: 1.86;
+}
+.feedback .feedback-item .info .dots {
+  display: flex;
+  margin-top: 28px;
+  gap: 6px;
+}
+.feedback .feedback-item .info .dots .dot {
+  width: 6px;
+  height: 6px;
+  border-radius: 50%;
+  background: #634700;
+  cursor: pointer;
+}
+.feedback .feedback-item .info .dots .dot.active {
+  background: var(--bg-btn);
+  cursor: default;
+}
+.feedback .feedback-item .content {
+  width: 66%;
+  margin-left: auto;
+}
+.feedback .feedback-item .content .open-quotes {
+  width: 30px;
+  height: 28px;
+}
+.feedback .feedback-item .content .block-quotes {
+  padding-left: 30px;
+  color: #fff;
+  font-size: 2.6rem;
+  font-style: italic;
+  line-height: 1.54; /* 153.846% */
 }
