--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,7 +10,7 @@ html {
 }
 /* khôi phục lại cỡ chữ mặc định */
 body {
-  height: 10000px;
+  /* height: 10000px; */
   font-size: 1.6rem;
   font-family: "Poppins", sans-serif;
 }
@@ -356,8 +356,15 @@ a {
   background: #2e2100;
   padding: 96px 0;
 }
+
+.feedback-list {
+  display: flex;
+  overflow: hidden;
+}
 .feedback .feedback-item {
   display: flex;
+  width: 100%;
+  flex-shrink: 0;
 }
 .feedback .feedback-item .info .avatar {
   width: 72px;
@@ -409,4 +416,45 @@ a {
   font-size: 2.6rem;
   font-style: italic;
   line-height: 1.54; /* 153.846% */
+}
+
+/* =======================Features===================== */
+.features {
+  margin-top: 135px;
+  padding: 65px 0;
+}
+.features .features-body {
+  display: flex;
+  justify-content: space-between;
+}
+.features .features-body .images {
+  display: flex;
+  gap: 30px;
+}
+.features .features-body .images img {
+  width: 270px;
+  height: 404px;
+  object-fit: cover;
+  border-radius: 16px;
+}
+.features .features-body .images .lower {
+  margin-top: 34px;
+}
+.features .features-body .content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 41%;
+}
+.features .features-body .content .desc {
+  margin-top: 16px;
+  color: #5f5b53;
+  font-size: 1.6rem;
+  line-height: 1.75; /* 175% */
+}
+.features .content .cta-btn {
+  margin-top: 32px;
+  width: 137px;
+  height: 50px;
+  background: var(--bg-btn);
 }
